--- a/act_Application/Views/Notificaciones/Index.cshtml
+++ b/act_Application/Views/Notificaciones/Index.cshtml
@@ -611,6 +611,38 @@
                                             <p class="notif-text">Fecha: @notificacionUsers.Notificaciones.FechaGeneracion.ToString("dd-MMMM-yyyy")</p>
                                             <button class="btn-visualizar" data-notification-id="@notificacionUsers.Notificaciones.Id">Visualizar</button>
                                         </div>
+                                        <div class="modal-principal" id="modal-@notificacionUsers.Notificaciones.Id">
+                                            <div class="modal__container">
+                                                <div class="modal__content">
+                                                    <table class="modal__table">
+                                                        <tr>
+                                                            <th></th>
+                                                            <th>Descripcion</th>
+                                                        </tr>
+                                                        <tr>
+                                                            <th><strong>Razon:</strong></th>
+                                                            <td>@notificacionUsers.Notificaciones.Razon</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th><strong>Fecha Generacion:</strong></th>
+                                                            <td>@notificacionUsers.Notificaciones.FechaGeneracion.ToString("dd-MM-yyyy")</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th><strong>Fecha Generacion:</strong></th>
+                                                            <td><p class="modal__description">@notificacionUsers.Notificaciones.Descripcion</p></td>
+                                                        </tr>
+                                                    </table>
+                                                    <form asp-action="Visualizado">
+                                                        <div class="container-modal-btn">
+                                                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                                            <input type="hidden" asp-for="@notificacionUsers.Notificaciones.Id" name="IdN" />
+                                                            <input type="hidden" value="1" name="Opcion" required />
+                                                            <button type="submit" data-notification-id="@notificacionUsers.Notificaciones.Id" class="modal__close">Cerrar</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
                                         break;
                                     case "CUOT":
                                         <div class="notif-container">
@@ -618,6 +650,38 @@
                                             <p class="notif-text">Razon: @notificacionUsers.Notificaciones.Razon</p>
                                             <p class="notif-text">Fecha: @notificacionUsers.Notificaciones.FechaGeneracion.ToString("dd-MMMM-yyyy")</p>
                                             <button class="btn-visualizar" data-notification-id="@notificacionUsers.Notificaciones.Id">Visualizar</button>
+                                        </div>
+                                        <div class="modal-principal" id="modal-@notificacionUsers.Notificaciones.Id">
+                                            <div class="modal__container">
+                                                <div class="modal__content">
+                                                    <table class="modal__table">
+                                                        <tr>
+                                                            <th></th>
+                                                            <th>Descripcion</th>
+                                                        </tr>
+                                                        <tr>
+                                                            <th><strong>Razon:</strong></th>
+                                                            <td>@notificacionUsers.Notificaciones.Razon</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th><strong>Fecha Generacion:</strong></th>
+                                                            <td>@notificacionUsers.Notificaciones.FechaGeneracion.ToString("dd-MM-yyyy")</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th><strong>Fecha Generacion:</strong></th>
+                                                            <td><p class="modal__description">@notificacionUsers.Notificaciones.Descripcion</p></td>
+                                                        </tr>
+                                                    </table>
+                                                    <form asp-action="Visualizado">
+                                                        <div class="container-modal-btn">
+                                                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                                            <input type="hidden" asp-for="@notificacionUsers.Notificaciones.Id" name="IdN" />
+                                                            <input type="hidden" value="1" name="Opcion" required />
+                                                            <button type="submit" data-notification-id="@notificacionUsers.Notificaciones.Id" class="modal__close">Cerrar</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
                                         </div>
                                     break;
                                     case "PRES":
@@ -633,10 +697,24 @@
                                                 <div class="modal-principal" id="modal-@notificacionUsers.Notificaciones.Id">
                                                     <div class="modal__container">
                                                         <div class="modal__content">
-                                                            <p class="modal__paragraph"><strong>Razon:</strong> @notificacionUsers.Notificaciones.Razon</p>
-                                                            <p class="modal__paragraph"><strong>Fecha:</strong> @notificacionUsers.Notificaciones.FechaGeneracion.ToString("dd-MM-yyyy")</p>
-                                                            <p class="modal__paragraph"><strong>Descripcion:</strong></p>
-                                                            <p class="modal__description">@notificacionUsers.Notificaciones.Descripcion</p>
+                                                            <table class="modal__table">
+                                                                <tr>
+                                                                    <th></th>
+                                                                    <th>Descripcion</th>
+                                                                </tr>
+                                                                <tr>
+                                                                    <th><strong>Razon:</strong></th>
+                                                                    <td>@notificacionUsers.Notificaciones.Razon</td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <th><strong>Fecha Generacion:</strong></th>
+                                                                    <td>@notificacionUsers.Notificaciones.FechaGeneracion.ToString("dd-MM-yyyy")</td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <th><strong>Fecha Generacion:</strong></th>
+                                                                    <td><p class="modal__description">@notificacionUsers.Notificaciones.Descripcion</p></td>
+                                                                </tr>
+                                                            </table>
                                                             <form asp-action="Visualizado">
                                                                 <div class="container-modal-btn">
                                                                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -653,10 +731,24 @@
                                                 <div class="modal-principal" id="modal-@notificacionUsers.Notificaciones.Id">
                                                     <div class="modal__container">
                                                         <div class="modal__content">
-                                                            <p class="modal__paragraph"><strong>Razon:</strong> @notificacionUsers.Notificaciones.Razon</p>
-                                                            <p class="modal__paragraph"><strong>Fecha:</strong> @notificacionUsers.Notificaciones.FechaGeneracion.ToString("dd-MM-yyyy")</p>
-                                                            <p class="modal__paragraph"><strong>Descripcion:</strong></p>
-                                                            <p class="modal__description">@notificacionUsers.Notificaciones.Descripcion</p>
+                                                            <table class="modal__table">
+                                                                <tr>
+                                                                    <th></th>
+                                                                    <th>Descripcion</th>
+                                                                </tr>
+                                                                <tr>
+                                                                    <th><strong>Razon:</strong></th>
+                                                                    <td>@notificacionUsers.Notificaciones.Razon</td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <th><strong>Fecha Generacion:</strong></th>
+                                                                    <td>@notificacionUsers.Notificaciones.FechaGeneracion.ToString("dd-MM-yyyy")</td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <th><strong>Fecha Generacion:</strong></th>
+                                                                    <td><p class="modal__description">@notificacionUsers.Notificaciones.Descripcion</p></td>
+                                                                </tr>
+                                                            </table>
                                                             <div class="select-modal">
                                                                 <select class="select-acep-dene">
                                                                     <option value="">Aceptar o Denegar Solicitud de Prestamo...</option>
