Objetivo 4 - Vistas. 1. Correciones en Home para Eventos.

--- a/act_Application/Views/Home/Index.cshtml
+++ b/act_Application/Views/Home/Index.cshtml
@@ -108,7 +108,7 @@
                                         </div>
                                         <div class="modal-infr" id="modal-infr-@evento.Eventos.Id">
                                             <form asp-action="Participar">
-                                                <input type="hidden" asp-for="@evento.Eventos.Id" id="IdP" name="IdP" />
+                                                <input type="hidden" asp-for="@evento.Eventos.Id" id="IdP" name="Id" />
                                                 <button class="add-participante" type="submit" data-event-id="@evento.Eventos.Id">Participar</button>
                                                 <a href="" class="close-modal" data-event-id="@evento.Eventos.Id">Cerrar</a>
                                             </form>
